syntax = "proto3";

package sum;

option go_package = "github.com/alexandreps1123/grpc-go/sum/proto";

service SumService {
    rpc Sum (SumRequest) returns (SumResponse) {}
    rpc FactorStream (FactorRequest) returns (stream SumResponse) {}
}

message FactorRequest {
    uint32 number = 1;
}

message SumRequest {
    uint32 a = 1;
    uint32 b = 2;
}

message SumResponse{
    uint32 result = 1;
}